# dabursociallisteningtool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
adapters/: base.py
adapters/instagram/: __init__.py  adapter.py  provider.py
adapters/instagram/fixtures/: instagram_post.json
adapters/profile/: __init__.py  adapter.py  provider.py
adapters/tiktok/: adapter.py  provider.py
adapters/tiktok/fixtures/: tiktok_post.json
api/: main.py
config/: competitors.json  seed_followers.json
core/: schema.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  components.jsx
dashboard_export/: __init__.py  excel.py
growth/: __init__.py  config.py  frame.py  models.py  pipeline.py  store.py
kpi/: growth.py  net_sentiment.py  rollups.py  wordcloud.py
nlp/: contract.py  service.py  stub.py  transformer_service.py
pipeline/: enrich.py  run.py  store.py  text_utils.py
scripts/: build_dashboard.py
tests/: test_adapter_contract.py  test_growth_config.py  test_growth_kpi.py  test_growth_pipeline_excel.py  test_growth_store.py  test_idempotency.py  test_instagram_adapter.py  test_kpi_net_sentiment.py  test_nlp_contract.py  test_pipeline_golden.py  test_rollups.py
