[project]
name = "dabur-social-listening"
version = "0.1.0"
description = "In-house social listening & sentiment analysis for Dabur International (MENA)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = ["core", "adapters", "nlp", "pipeline", "kpi", "api"]
