[project]
name = "dabur-social-listening"
version = "0.1.0"
description = "In-house social listening & sentiment analysis for Dabur International (MENA)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# Real, self-hosted NLP backend (MARBERT-family detect+score). Deliberately NOT in `dev`
# so CI stays lean and GPU-free; install explicitly to run the transformer backend and
# exercise the real half of the NLP contract test: `pip install -e ".[transformer]"`.
transformer = [
    "transformers>=4.40",
    "torch>=2.2",
    "sentencepiece>=0.2",
    "protobuf>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = ["core", "adapters", "nlp", "pipeline", "kpi", "api"]
